--- a/src/AutoCompleteText.css
+++ b/src/AutoCompleteText.css
@@ -36,6 +36,18 @@
   border: 1px solid grey;
 }
 
+.loadingMsg {
+  padding-bottom: 10px;
+}
+
+.errorMsg {
+  padding: 10px;
+  background-color: #f44336; /* Red */
+  color: white;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 .AutoCompleteText ul::before {
   content: "";
 }
@@ -110,7 +122,7 @@
 }
 
 @media (max-width: 640px) {
-  .App-content-wrapper {
+  .App .App-content-wrapper {
     width: 100%;
   }
 
@@ -119,6 +131,7 @@
   }
   .selectedListItem {
     display: block;
+    text-align: left;
     /* border: 1px solid grey; */
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 4px 1px rgba(0, 0, 0, .18);
   }
@@ -129,20 +142,28 @@
 
   .rightGroup {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    max-width: 95%;
     margin-top: 20px;
   }
 }
 
 @media (max-width: 1250px) {
+  .App-content-wrapper {
+    width: 60%;
+  }
+
   .selectedLists {
     padding-inline-start: 0 !important;
   }
+
+  .selectedListItem .selectedListTitle {
+    width: 60%;
+  }
+
   .rightGroup {
     text-align: right;
     grid-template-columns: 2fr 1fr;
   }
 
-  
-  
 }
